web/src/style.css
/* ... */
.post-content {
  font-size: 16px;
  line-height: 28px;
}

.post-banner {
  position: relative;
  --banner-color: gray;
  --banner-color-darker: color-mix(in srgb, var(--banner-color) 50%, transparent 50%);
  --banner-color-lighter: color-mix(in srgb, var(--banner-color) 20%, transparent 80%);

  @media (prefers-color-scheme: dark) {
    &:not(.light) {
      --banner-color-darker: var(--banner-color);
      --banner-color-lighter: color-mix(in srgb, var(--banner-color) 40%, transparent 60%);
    }
  }

  background: linear-gradient(
    45deg,
    var(--banner-color-darker) 25%,
    var(--banner-color-lighter) 25%,
    var(--banner-color-lighter) 50%,
    var(--banner-color-darker) 50%,
    var(--banner-color-darker) 75%,
    var(--banner-color-lighter) 75%
  );
  background-size: 40px 40px;
  padding: 5px 5px 5px 30px;
  margin-bottom: 10px;
}

.post-banner-inner {
  background: color-mix(in srgb, var(--color-bg) 75%, transparent 25%);
  padding: 10px 20px;
  box-shadow: 0 2px 3px rgba(0,0,0,.3) inset;
  font-size: 16px;
  font-family: monospace;
}

.post-banner-amber {
  --banner-color: #c39e50;
}

.post-metadata, .post-metadata-aux {
  & .post-metadata-line {
    display: flex;
    align-items: center;
  }


  & svg:not(.title) {
    height: 18px;
    fill: var(--color-fg-icon);
  }

  font-size: 14px;
  line-height: 18px;
}

.post-metadata-tag:not(:first-of-type){
  margin-left: 5px;
}

.post-metadata {
  position: absolute;

  left: 0;
  right: 0;
  top: -80px; /* .post-content-wrapper was 50vh + 100px */

  @media (max-width: 1150px) {
    left: 180px;
  }

  @media (max-width: 800px) {
    left: 0;
  }

  @media (max-width: 500px) {
    position: relative;
    left: 0;
    flex-direction: column;
    margin-bottom: -40px;
    & .post-metadata-line {
      justify-content: center;
      margin-bottom: 5px;
    }
  }

  display: flex;
  justify-content: center;


  & .post-metadata-line {
    margin-right: 10px;
    margin-left: 10px;
  }
}

.post-metadata-aux {
  position: fixed;
  left: 40px;
  top: 140px;
  display: block;
  z-index: 1;

  @media (max-width: 800px) {
    top: 0;
    left: 100px;
    height: 80px;
    width: calc(100% - 260px);
    display: flex;
    flex-direction: row;
    align-items: center;

    & .post-metadata-line {
      display: none;
    }
  }

  & .post-metadata-line {
    margin-bottom: 5px;
  }

  & .title {
    --baseline-y: 18px;
    --size: 16;
    --line-height: 24px;
    margin-bottom: 10px;

    @media (max-width: 800px) {
      margin-bottom: 0;
      margin-right: 10px;
    }
  }

  & .post-metadata-line, & .title .var-group {
    transition-property: opacity, transform;
    transition-duration: .1s;
    transition-timing-function: ease-out;
  }

  & .title .var-group {
    transition-delay: calc(var(--grp-idx) * 15ms);
  }

  & .surrogate-title {
    font-size: 16px;
    max-width: 160px;
    margin-bottom: 10px;
  }
}

.post {
  &.post-exiting, &:not(.post-docked) {
    & .post-metadata-aux {
      & .post-metadata-line {
        opacity: 0;
        transform: translateX(-5px);
      }
      & .title .var-group {
        opacity: 0;
        transform:
          translateX(-5px)
          translateX(calc(1px * var(--grp-line-xdiff, var(--grp-xdiff)) * var(--size)));
      }
    }
  }
}

.post-metadata-published, .post-metadata-updated {
  font-family: monospace;
}

.post-comments {
  max-width: 600px;
  margin: 60px auto 0 auto;

  @media (max-width: 950px) {
    max-width: 450px;
  }
}

/* Content */
blockquote {
  border-left: rgba(0,0,0,.3) 10px solid;
  background: rgba(0,0,0,.05);
  @media (prefers-color-scheme: dark) {
    &:not(.light) {
      border-left: rgba(0,0,0,.5) 10px solid;
      background: rgba(0,0,0,.2);
    }
  }
  margin: 0;
  padding: 0px 20px 0 30px;
  border-radius: 8px;
  box-shadow: 0 2px 3px rgba(0,0,0,.3);
  display: flow-root;
}

blockquote:has(> ul) {
  padding-left: 5px;
}

pre:has(code) {
  background: #002b36;
  color: #839496;
  padding: 12px 20px;
  border-radius: 8px;
  box-shadow: 0 2px 3px rgba(0,0,0,.3);
  overflow: auto;
}

code:not(pre code) {
  padding: 2px 5px;
  border-radius: 5px;
  background-color: color-mix(in srgb, var(--color-fg) 5%, var(--color-bg) 95%);
  @media (prefers-color-scheme: dark) {
    background-color: color-mix(in srgb, var(--color-fg) 10%, var(--color-bg) 90%);
  }
}

a:has(> code) {
  border-bottom: none;
  text-decoration-line: underline;
  text-decoration-color: var(--color-fg-icon);
  text-decoration-style: dotted;
  text-decoration-thickness: 1px;
  text-underline-offset: 4px;
}

.post img {
  max-width: 100%;
}

.katex-html {
  display: none;
}

h2 {
  margin-block-start: 1.5em;
  margin-block-end: 0.8em;
}

h3 {
  margin-block-start: 1.5em;
  margin-block-end: 1em;
}

/* About */
.about {
  left: 0;
  right: 0;
}

#arrow {
  position: fixed;
  width: 100px;
  top: 160px;
  left: 200px;
  transform: rotate(-90deg);
  overflow: visible;
  filter: drop-shadow(2px 0 3px rgba(0,0,0,.3)); /* This is rotated! */

  @media (max-width: 800px) {
    transform: rotate(-30deg);
    left: 140px;
  }

  stroke: var(--color-fg);
  stroke-width: 3px;
  stroke-linecap: round;
  fill: none;
  pointer-events: none;
  z-index: 30;

  & path {
    stroke-dasharray: var(--path-length);
  }
}

.nav-about {
  transition: opacity .15s ease-out;
  transition-delay: .3s;
}

root[data-view="about"] {
  & .nav-about {
    opacity: 0;
    transition-timing-function: ease-in;
    transition-delay: 0s;
  }
}

.about-title {
  margin: 0 0 20px 0;
}

.about-content {
  position: absolute;
  top: 200px;
  left: 240px;
  right: 0;

  @media (max-width: 800px) {
    left: 0;
    top: 240px;
  }

  font-size: 16px;
  line-height: 28px;
}

.about-inner {
  padding: 40px 60px 60px 60px;
  max-width: 600px;
  @media (max-width: 800px) {
    margin: 0 auto;
  }
}
/* ... */

